--- a/SatrapFramework-Micro/.env
+++ b/SatrapFramework-Micro/.env
@@ -1,3 +1,10 @@
 S3_BUCKET="devbucket"
 SECRET_KEY="abc123"
 
+BASE_URL = "https://localhost"
+
+DB_driver = "mysql"
+DB_host = "localhost"
+DB_name = ""
+DB_user = ""
+DB_password = ""
